--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "initializer_list": "c",
         "ranges": "c",
         "utility": "c",
-        "valarray": "c"
+        "valarray": "c",
+        "string": "cpp",
+        "*.tcc": "cpp"
     }
 }
